# daqdemos

./: CMakeLists.txt
plugins/: FakeDataConsumerDAQModule.cpp  FakeDataConsumerDAQModule.hpp  FakeDataProducerDAQModule.cpp  FakeDataProducerDAQModule.hpp  RandomDataListGenerator.cpp  RandomDataListGenerator.hpp
python/: fdpc_config.py  fdpc_config_20x.py  readout_config.py
schema/: daqdemos-FakeDataConsumerDAQModule-schema.jsonnet  daqdemos-FakeDataProducerDAQModule-schema.jsonnet  daqdemos-RandomDataListGenerator-schema.jsonnet
